[gd_scene load_steps=17 format=2]

[ext_resource path="res://Game/Global/StateMachine/State.gd" type="Script" id=1]
[ext_resource path="res://Game/Global/StateMachine/StateMachine.gd" type="Script" id=2]
[ext_resource path="res://Game/Global/Shapes/Circle.png" type="Texture" id=3]
[ext_resource path="res://Game/Characters/Enemy/Indicator/IndicatorSpawn.gd" type="Script" id=4]
[ext_resource path="res://Game/Characters/Enemy/Lazer.gdshader" type="Shader" id=5]
[ext_resource path="res://Game/Characters/Enemy/Lazer.gd" type="Script" id=6]
[ext_resource path="res://Game/Characters/Enemy/States/Scan.gd" type="Script" id=7]
[ext_resource path="res://Game/Characters/Enemy/States/Torch.gd" type="Script" id=8]
[ext_resource path="res://Game/Characters/Enemy/Detection.gd" type="Script" id=9]
[ext_resource path="res://Game/Global/Shapes/Light/spotlight.png" type="Texture" id=10]
[ext_resource path="res://Game/Characters/Enemy/Enemy.gd" type="Script" id=12]
[ext_resource path="res://Game/Characters/Enemy/States/Attack.gd" type="Script" id=13]

[sub_resource type="CircleShape2D" id=1]
radius = 25.02

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 5 )
shader_param/speed = 2.0
shader_param/len = 50.0

[sub_resource type="OpenSimplexNoise" id=5]
octaves = 1

[sub_resource type="NoiseTexture" id=6]
flags = 3
seamless = true
noise = SubResource( 5 )

[node name="Enemy" type="KinematicBody2D" groups=["enemy"]]
light_mask = 5
collision_layer = 5
collision_mask = 44
script = ExtResource( 12 )
speed = 600
detection = NodePath("Detection")
debug_pathfinder = true
show_path = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Ray" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 0 )
collision_mask = 24

[node name="Ray2" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 0 )
collision_mask = 24

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1.3, 0.3, 0.3, 1 )
light_mask = 5
texture = ExtResource( 3 )

[node name="IndicatorSpawn" type="Position2D" parent="."]
position = Vector2( 0, -42 )
script = ExtResource( 4 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )
initial_state = NodePath("Scan")

[node name="Scan" type="Node" parent="StateMachine"]
script = ExtResource( 7 )
colour = Color( 0.5, 0.5, 0.5, 1 )

[node name="Search" type="Node" parent="StateMachine"]
script = ExtResource( 8 )
colour = Color( 1.3, 1.2, 0.3, 1 )
light = Color( 1, 0.952941, 0.203922, 0.8 )
peak_mod = Color( 2, 2, 0.7, 1 )
show_estimation = true

[node name="Tween" type="Tween" parent="StateMachine/Search"]

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource( 13 )
colour = Color( 1.3, 0.3, 0.3, 1 )
light = Color( 1, 0.2, 0.2, 0.8 )

[node name="Detect" type="Node2D" parent="StateMachine/Attack"]

[node name="Left" type="RayCast2D" parent="StateMachine/Attack/Detect"]
enabled = true
cast_to = Vector2( 0, -50 )
collision_mask = 24

[node name="Aim" type="RayCast2D" parent="StateMachine/Attack/Detect"]
enabled = true
cast_to = Vector2( 800, 0 )
collision_mask = 4

[node name="Right" type="RayCast2D" parent="StateMachine/Attack/Detect"]
enabled = true
collision_mask = 24

[node name="BackL" type="RayCast2D" parent="StateMachine/Attack/Detect"]
enabled = true
cast_to = Vector2( -35.35, -35.35 )
collision_mask = 24

[node name="Back" type="RayCast2D" parent="StateMachine/Attack/Detect"]
enabled = true
cast_to = Vector2( -50, 0 )
collision_mask = 24

[node name="BackR" type="RayCast2D" parent="StateMachine/Attack/Detect"]
enabled = true
cast_to = Vector2( -35.35, 35.35 )
collision_mask = 24

[node name="Die" type="Node" parent="StateMachine"]
script = ExtResource( 1 )

[node name="Lazer" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 10000, 0 )
script = ExtResource( 6 )
deg_per_second = 90.0

[node name="Line" type="Line2D" parent="Lazer"]
light_mask = 5
material = SubResource( 4 )
z_index = -5
points = PoolVector2Array( 100, 0, 25, 0 )
width = 2.0
default_color = Color( 1, 0.3, 0.3, 1 )
texture = SubResource( 6 )
texture_mode = 2

[node name="Detection" type="Polygon2D" parent="."]
visible = false
modulate = Color( 1, 0, 0, 1 )
light_mask = 17
z_index = -1
antialiased = true
texture = ExtResource( 10 )
polygon = PoolVector2Array( 606.218, -350, 607.739, -347.352, 609.249, -344.697, 610.747, -342.035, 612.234, -339.367, 613.709, -336.692, 615.172, -334.011, 616.624, -331.324, 618.063, -328.63, 619.491, -325.93, 620.908, -323.224, 622.312, -320.512, 623.705, -317.793, 625.085, -315.069, 626.454, -312.338, 627.811, -309.602, 629.156, -306.86, 630.489, -304.112, 631.81, -301.358, 633.119, -298.598, 634.415, -295.833, 635.7, -293.062, 636.973, -290.285, 638.233, -287.503, 639.482, -284.716, 640.718, -281.923, 641.942, -279.124, 643.154, -276.321, 644.353, -273.512, 645.541, -270.698, 646.716, -267.878, 647.878, -265.054, 649.029, -262.225, 650.167, -259.39, 651.292, -256.551, 652.406, -253.707, 653.506, -250.858, 654.595, -248.004, 655.671, -245.145, 656.734, -242.282, 657.785, -239.414, 658.823, -236.542, 659.849, -233.665, 660.862, -230.783, 661.863, -227.898, 662.851, -225.008, 663.827, -222.113, 664.789, -219.215, 665.74, -216.312, 666.677, -213.405, 667.602, -210.494, 668.514, -207.579, 669.413, -204.66, 670.3, -201.737, 671.174, -198.811, 672.035, -195.88, 672.883, -192.946, 673.719, -190.008, 674.541, -187.067, 675.351, -184.122, 676.148, -181.173, 676.932, -178.221, 677.703, -175.266, 678.462, -172.307, 679.207, -169.345, 679.939, -166.38, 680.659, -163.412, 681.365, -160.44, 682.059, -157.466, 682.74, -154.488, 683.407, -151.508, 684.062, -148.524, 684.703, -145.538, 685.332, -142.549, 685.947, -139.558, 686.55, -136.563, 687.139, -133.566, 687.715, -130.567, 688.278, -127.565, 688.828, -124.56, 689.365, -121.554, 689.889, -118.545, 690.4, -115.533, 690.897, -112.52, 691.382, -109.504, 691.853, -106.486, 692.311, -103.467, 692.756, -100.445, 693.188, -97.4212, 693.606, -94.3956, 694.011, -91.3683, 694.403, -88.3393, 694.782, -85.3085, 695.148, -82.2762, 695.5, -79.2422, 695.839, -76.2068, 696.165, -73.1699, 696.478, -70.1316, 696.777, -67.092, 697.063, -64.0511, 697.336, -61.009, 697.596, -57.9657, 697.842, -54.9214, 698.075, -51.8759, 698.295, -48.8295, 698.501, -45.7822, 698.694, -42.734, 698.874, -39.685, 699.041, -36.6352, 699.194, -33.5847, 699.334, -30.5336, 699.46, -27.4819, 699.574, -24.4296, 699.674, -21.377, 699.76, -18.3239, 699.833, -15.2704, 699.893, -12.2167, 699.94, -9.16272, 699.973, -6.10857, 699.993, -3.05432, 700, 0, 699.993, 3.05432, 699.973, 6.10857, 699.94, 9.16272, 699.893, 12.2167, 699.833, 15.2704, 699.76, 18.3239, 699.674, 21.377, 699.574, 24.4296, 699.46, 27.4819, 699.334, 30.5336, 699.194, 33.5847, 699.041, 36.6352, 698.874, 39.685, 698.694, 42.734, 698.501, 45.7822, 698.295, 48.8295, 698.075, 51.8759, 697.842, 54.9214, 697.596, 57.9657, 697.336, 61.009, 697.063, 64.0511, 696.777, 67.092, 696.478, 70.1316, 696.165, 73.1699, 695.839, 76.2068, 695.5, 79.2422, 695.148, 82.2762, 694.782, 85.3085, 694.403, 88.3393, 694.011, 91.3683, 693.606, 94.3956, 693.188, 97.4212, 692.756, 100.445, 692.311, 103.467, 691.853, 106.486, 691.382, 109.504, 690.897, 112.52, 690.4, 115.533, 689.889, 118.545, 689.365, 121.554, 688.828, 124.56, 688.278, 127.565, 687.715, 130.567, 687.139, 133.566, 686.55, 136.563, 685.947, 139.558, 685.332, 142.549, 684.703, 145.538, 684.062, 148.524, 683.407, 151.508, 682.74, 154.488, 682.059, 157.466, 681.365, 160.44, 680.659, 163.412, 679.939, 166.38, 679.207, 169.345, 678.462, 172.307, 677.703, 175.266, 676.932, 178.221, 676.148, 181.173, 675.351, 184.122, 674.541, 187.067, 673.719, 190.008, 672.883, 192.946, 672.035, 195.88, 671.174, 198.811, 670.3, 201.737, 669.413, 204.66, 668.514, 207.579, 667.602, 210.494, 666.677, 213.405, 665.74, 216.312, 664.789, 219.215, 663.827, 222.113, 662.851, 225.008, 661.863, 227.898, 660.862, 230.783, 659.849, 233.665, 658.823, 236.542, 657.785, 239.414, 656.734, 242.282, 655.671, 245.145, 654.595, 248.004, 653.506, 250.858, 652.406, 253.707, 651.292, 256.551, 650.167, 259.39, 649.029, 262.225, 647.878, 265.054, 646.716, 267.878, 645.541, 270.698, 644.353, 273.512, 643.154, 276.321, 641.942, 279.124, 640.718, 281.923, 639.482, 284.716, 638.233, 287.503, 636.973, 290.285, 635.7, 293.062, 634.415, 295.833, 633.119, 298.598, 631.81, 301.358, 630.489, 304.112, 629.156, 306.86, 627.811, 309.602, 626.454, 312.338, 625.085, 315.069, 623.705, 317.793, 622.312, 320.512, 620.908, 323.224, 619.491, 325.93, 618.063, 328.63, 616.624, 331.324, 615.172, 334.011, 613.709, 336.692, 612.234, 339.367, 610.747, 342.035, 609.249, 344.697, 607.739, 347.352, 606.218, 350, 0, 0 )
uv = PoolVector2Array( 606.218, -350, 607.739, -347.352, 609.249, -344.697, 610.747, -342.035, 612.234, -339.367, 613.709, -336.692, 615.172, -334.011, 616.624, -331.324, 618.063, -328.63, 619.491, -325.93, 620.908, -323.224, 622.312, -320.512, 623.705, -317.793, 625.085, -315.069, 626.454, -312.338, 627.811, -309.602, 629.156, -306.86, 630.489, -304.112, 631.81, -301.358, 633.119, -298.598, 634.415, -295.833, 635.7, -293.062, 636.973, -290.285, 638.233, -287.503, 639.482, -284.716, 640.718, -281.923, 641.942, -279.124, 643.154, -276.321, 644.353, -273.512, 645.541, -270.698, 646.716, -267.878, 647.878, -265.054, 649.029, -262.225, 650.167, -259.39, 651.292, -256.551, 652.406, -253.707, 653.506, -250.858, 654.595, -248.004, 655.671, -245.145, 656.734, -242.282, 657.785, -239.414, 658.823, -236.542, 659.849, -233.665, 660.862, -230.783, 661.863, -227.898, 662.851, -225.008, 663.827, -222.113, 664.789, -219.215, 665.74, -216.312, 666.677, -213.405, 667.602, -210.494, 668.514, -207.579, 669.413, -204.66, 670.3, -201.737, 671.174, -198.811, 672.035, -195.88, 672.883, -192.946, 673.719, -190.008, 674.541, -187.067, 675.351, -184.122, 676.148, -181.173, 676.932, -178.221, 677.703, -175.266, 678.462, -172.307, 679.207, -169.345, 679.939, -166.38, 680.659, -163.412, 681.365, -160.44, 682.059, -157.466, 682.74, -154.488, 683.407, -151.508, 684.062, -148.524, 684.703, -145.538, 685.332, -142.549, 685.947, -139.558, 686.55, -136.563, 687.139, -133.566, 687.715, -130.567, 688.278, -127.565, 688.828, -124.56, 689.365, -121.554, 689.889, -118.545, 690.4, -115.533, 690.897, -112.52, 691.382, -109.504, 691.853, -106.486, 692.311, -103.467, 692.756, -100.445, 693.188, -97.4212, 693.606, -94.3956, 694.011, -91.3683, 694.403, -88.3393, 694.782, -85.3085, 695.148, -82.2762, 695.5, -79.2422, 695.839, -76.2068, 696.165, -73.1699, 696.478, -70.1316, 696.777, -67.092, 697.063, -64.0511, 697.336, -61.009, 697.596, -57.9657, 697.842, -54.9214, 698.075, -51.8759, 698.295, -48.8295, 698.501, -45.7822, 698.694, -42.734, 698.874, -39.685, 699.041, -36.6352, 699.194, -33.5847, 699.334, -30.5336, 699.46, -27.4819, 699.574, -24.4296, 699.674, -21.377, 699.76, -18.3239, 699.833, -15.2704, 699.893, -12.2167, 699.94, -9.16272, 699.973, -6.10857, 699.993, -3.05432, 700, 0, 699.993, 3.05432, 699.973, 6.10857, 699.94, 9.16272, 699.893, 12.2167, 699.833, 15.2704, 699.76, 18.3239, 699.674, 21.377, 699.574, 24.4296, 699.46, 27.4819, 699.334, 30.5336, 699.194, 33.5847, 699.041, 36.6352, 698.874, 39.685, 698.694, 42.734, 698.501, 45.7822, 698.295, 48.8295, 698.075, 51.8759, 697.842, 54.9214, 697.596, 57.9657, 697.336, 61.009, 697.063, 64.0511, 696.777, 67.092, 696.478, 70.1316, 696.165, 73.1699, 695.839, 76.2068, 695.5, 79.2422, 695.148, 82.2762, 694.782, 85.3085, 694.403, 88.3393, 694.011, 91.3683, 693.606, 94.3956, 693.188, 97.4212, 692.756, 100.445, 692.311, 103.467, 691.853, 106.486, 691.382, 109.504, 690.897, 112.52, 690.4, 115.533, 689.889, 118.545, 689.365, 121.554, 688.828, 124.56, 688.278, 127.565, 687.715, 130.567, 687.139, 133.566, 686.55, 136.563, 685.947, 139.558, 685.332, 142.549, 684.703, 145.538, 684.062, 148.524, 683.407, 151.508, 682.74, 154.488, 682.059, 157.466, 681.365, 160.44, 680.659, 163.412, 679.939, 166.38, 679.207, 169.345, 678.462, 172.307, 677.703, 175.266, 676.932, 178.221, 676.148, 181.173, 675.351, 184.122, 674.541, 187.067, 673.719, 190.008, 672.883, 192.946, 672.035, 195.88, 671.174, 198.811, 670.3, 201.737, 669.413, 204.66, 668.514, 207.579, 667.602, 210.494, 666.677, 213.405, 665.74, 216.312, 664.789, 219.215, 663.827, 222.113, 662.851, 225.008, 661.863, 227.898, 660.862, 230.783, 659.849, 233.665, 658.823, 236.542, 657.785, 239.414, 656.734, 242.282, 655.671, 245.145, 654.595, 248.004, 653.506, 250.858, 652.406, 253.707, 651.292, 256.551, 650.167, 259.39, 649.029, 262.225, 647.878, 265.054, 646.716, 267.878, 645.541, 270.698, 644.353, 273.512, 643.154, 276.321, 641.942, 279.124, 640.718, 281.923, 639.482, 284.716, 638.233, 287.503, 636.973, 290.285, 635.7, 293.062, 634.415, 295.833, 633.119, 298.598, 631.81, 301.358, 630.489, 304.112, 629.156, 306.86, 627.811, 309.602, 626.454, 312.338, 625.085, 315.069, 623.705, 317.793, 622.312, 320.512, 620.908, 323.224, 619.491, 325.93, 618.063, 328.63, 616.624, 331.324, 615.172, 334.011, 613.709, 336.692, 612.234, 339.367, 610.747, 342.035, 609.249, 344.697, 607.739, 347.352, 606.218, 350, 0, 0 )
script = ExtResource( 9 )
distance = 700
precision = 4.0

[node name="Caster" type="RemoteTransform2D" parent="Detection"]
remote_path = NodePath("../../StateMachine/Attack/Detect")

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
modulate = Color( 1, 0.2, 0.2, 0.8 )
light_mask = 17
rotation = -7.8664
z_index = -1
antialiased = true
texture = ExtResource( 10 )
polygon = PoolVector2Array( 178.207, -102.888, 178.487, -18.7598, 181.77, -18.3033, 199.849, -18.3635, 697.336, -61.009, 697.596, -57.9657, 697.842, -54.9214, 698.075, -51.8759, 698.295, -48.8295, 698.501, -45.7822, 698.694, -42.734, 698.874, -39.685, 699.041, -36.6352, 699.194, -33.5847, 699.334, -30.5336, 699.46, -27.4819, 699.574, -24.4296, 699.674, -21.377, 699.76, -18.3239, 699.833, -15.2704, 699.893, -12.2167, 699.94, -9.16272, 699.973, -6.10857, 699.993, -3.05432, 700, 0, 699.993, 3.05432, 699.973, 6.10857, 699.94, 9.16272, 699.893, 12.2167, 699.833, 15.2704, 699.76, 18.3239, 699.674, 21.377, 699.574, 24.4296, 699.46, 27.4819, 699.334, 30.5336, 699.194, 33.5847, 699.041, 36.6352, 698.874, 39.685, 698.694, 42.734, 698.501, 45.7822, 698.295, 48.8295, 698.075, 51.8759, 697.842, 54.9214, 697.596, 57.9657, 697.336, 61.009, 697.063, 64.0511, 696.777, 67.092, 696.478, 70.1316, 696.165, 73.1699, 695.839, 76.2068, 695.5, 79.2422, 695.148, 82.2762, 694.782, 85.3085, 694.403, 88.3393, 694.011, 91.3683, 693.606, 94.3956, 693.188, 97.4212, 692.756, 100.445, 692.311, 103.467, 691.853, 106.486, 691.382, 109.504, 690.897, 112.52, 690.4, 115.533, 689.889, 118.545, 689.365, 121.554, 688.828, 124.56, 688.278, 127.565, 687.715, 130.567, 687.139, 133.566, 686.55, 136.563, 685.947, 139.558, 685.332, 142.549, 684.703, 145.538, 684.062, 148.524, 683.407, 151.508, 682.74, 154.488, 682.059, 157.466, 681.365, 160.44, 680.659, 163.412, 679.939, 166.38, 679.207, 169.345, 678.462, 172.307, 677.703, 175.266, 676.932, 178.221, 676.148, 181.173, 675.351, 184.122, 674.541, 187.067, 673.719, 190.008, 672.883, 192.946, 672.035, 195.88, 671.174, 198.811, 670.3, 201.737, 669.413, 204.66, 668.514, 207.579, 667.602, 210.494, 666.677, 213.405, 665.74, 216.312, 664.789, 219.215, 663.827, 222.113, 662.851, 225.008, 661.863, 227.898, 660.862, 230.783, 659.849, 233.665, 658.823, 236.542, 657.785, 239.414, 656.734, 242.282, 655.671, 245.145, 654.595, 248.004, 653.506, 250.858, 652.406, 253.707, 651.292, 256.551, 650.167, 259.39, 649.029, 262.225, 647.878, 265.054, 646.716, 267.878, 645.541, 270.698, 644.353, 273.512, 643.154, 276.321, 641.942, 279.124, 640.718, 281.923, 639.482, 284.716, 638.233, 287.503, 636.973, 290.285, 635.7, 293.062, 634.415, 295.833, 633.119, 298.598, 631.81, 301.358, 630.489, 304.112, 629.156, 306.86, 627.811, 309.602, 626.454, 312.338, 625.085, 315.069, 623.705, 317.793, 622.312, 320.512, 620.908, 323.224, 619.491, 325.93, 618.063, 328.63, 616.624, 331.324, 615.172, 334.011, 613.709, 336.692, 612.234, 339.367, 610.747, 342.035, 609.249, 344.697, 607.739, 347.352, 606.218, 350, 0, 0 )
uv = PoolVector2Array( 178.207, -102.888, 178.487, -18.7598, 181.77, -18.3033, 199.849, -18.3635, 697.336, -61.009, 697.596, -57.9657, 697.842, -54.9214, 698.075, -51.8759, 698.295, -48.8295, 698.501, -45.7822, 698.694, -42.734, 698.874, -39.685, 699.041, -36.6352, 699.194, -33.5847, 699.334, -30.5336, 699.46, -27.4819, 699.574, -24.4296, 699.674, -21.377, 699.76, -18.3239, 699.833, -15.2704, 699.893, -12.2167, 699.94, -9.16272, 699.973, -6.10857, 699.993, -3.05432, 700, 0, 699.993, 3.05432, 699.973, 6.10857, 699.94, 9.16272, 699.893, 12.2167, 699.833, 15.2704, 699.76, 18.3239, 699.674, 21.377, 699.574, 24.4296, 699.46, 27.4819, 699.334, 30.5336, 699.194, 33.5847, 699.041, 36.6352, 698.874, 39.685, 698.694, 42.734, 698.501, 45.7822, 698.295, 48.8295, 698.075, 51.8759, 697.842, 54.9214, 697.596, 57.9657, 697.336, 61.009, 697.063, 64.0511, 696.777, 67.092, 696.478, 70.1316, 696.165, 73.1699, 695.839, 76.2068, 695.5, 79.2422, 695.148, 82.2762, 694.782, 85.3085, 694.403, 88.3393, 694.011, 91.3683, 693.606, 94.3956, 693.188, 97.4212, 692.756, 100.445, 692.311, 103.467, 691.853, 106.486, 691.382, 109.504, 690.897, 112.52, 690.4, 115.533, 689.889, 118.545, 689.365, 121.554, 688.828, 124.56, 688.278, 127.565, 687.715, 130.567, 687.139, 133.566, 686.55, 136.563, 685.947, 139.558, 685.332, 142.549, 684.703, 145.538, 684.062, 148.524, 683.407, 151.508, 682.74, 154.488, 682.059, 157.466, 681.365, 160.44, 680.659, 163.412, 679.939, 166.38, 679.207, 169.345, 678.462, 172.307, 677.703, 175.266, 676.932, 178.221, 676.148, 181.173, 675.351, 184.122, 674.541, 187.067, 673.719, 190.008, 672.883, 192.946, 672.035, 195.88, 671.174, 198.811, 670.3, 201.737, 669.413, 204.66, 668.514, 207.579, 667.602, 210.494, 666.677, 213.405, 665.74, 216.312, 664.789, 219.215, 663.827, 222.113, 662.851, 225.008, 661.863, 227.898, 660.862, 230.783, 659.849, 233.665, 658.823, 236.542, 657.785, 239.414, 656.734, 242.282, 655.671, 245.145, 654.595, 248.004, 653.506, 250.858, 652.406, 253.707, 651.292, 256.551, 650.167, 259.39, 649.029, 262.225, 647.878, 265.054, 646.716, 267.878, 645.541, 270.698, 644.353, 273.512, 643.154, 276.321, 641.942, 279.124, 640.718, 281.923, 639.482, 284.716, 638.233, 287.503, 636.973, 290.285, 635.7, 293.062, 634.415, 295.833, 633.119, 298.598, 631.81, 301.358, 630.489, 304.112, 629.156, 306.86, 627.811, 309.602, 626.454, 312.338, 625.085, 315.069, 623.705, 317.793, 622.312, 320.512, 620.908, 323.224, 619.491, 325.93, 618.063, 328.63, 616.624, 331.324, 615.172, 334.011, 613.709, 336.692, 612.234, 339.367, 610.747, 342.035, 609.249, 344.697, 607.739, 347.352, 606.218, 350, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[connection signal="arrived_at" from="." to="StateMachine/Search" method="arrived"]
[connection signal="tween_all_completed" from="StateMachine/Search/Tween" to="StateMachine/Search" method="tween_completed"]
[connection signal="found" from="Lazer" to="StateMachine/Scan" method="_on_Lazer_found"]
[connection signal="found" from="Detection" to="StateMachine/Search" method="found_player"]
